--- a/Styles.css
+++ b/Styles.css
@@ -77,7 +77,9 @@ header {
 }
 
 .logo {
-  height: 92px; width: auto;
+  height: 92px;
+   width: auto;
+   max-height: none
 }
   .logo {
   transition: transform 0.3s ease;
