--- a/partials/header.html
+++ b/partials/header.html
@@ -1,1 +1,11 @@
 
+<header>
+  <nav class="nav">
+    <img src="images/Logo1.png" alt="TichaAfrica Logo" class="logo">
+
+    <div class="nav-links">
+      <a href="teachers.html" data-page="teachers">Teachers</a>
+      <a href="institutional.html" data-page="institutional">Institutions</a>
+    </div>
+  </nav>
+</header>
