--- a/partials/header.html
+++ b/partials/header.html
@@ -1,11 +1,10 @@
-
 <header>
   <nav class="nav">
-    <img src="images/Logo1.png" alt="TichaAfrica Logo" class="logo">
-
+    <img src="images/Logo1.png" alt="TichaAfrica Logo" class="logo" />
     <div class="nav-links">
-      <a href="teachers.html" data-page="teachers">Teachers</a>
-      <a href="institutional.html" data-page="institutional">Institutions</a>
+      <a href="index.html">Home</a>
+      <a href="teachers.html">Teachers</a>
+      <a href="institutional.html">Institutions</a>
     </div>
   </nav>
 </header>
