--- a/partials/header.html
+++ b/partials/header.html
@@ -1,10 +1,13 @@
-<header>
+<header class="site-header">
   <nav class="nav">
-    <img src="images/Logo1.png" alt="TichaAfrica Logo" class="logo" />
+    <a href="/" class="brand">
+      <img src="/assets/images/Logo1.png" alt="TichaAfrica" class="logo">
+    </a>
+
     <div class="nav-links">
-      <a href="index.html">Home</a>
-      <a href="teachers.html">Teachers</a>
-      <a href="institutional.html">Institutions</a>
+      <a href="/" data-nav="home">Home</a>
+      <a href="/teachers/" data-nav="teachers" class="primary">Teachers</a>
+      <a href="/institutions/" data-nav="institutions">Institutions</a>
     </div>
   </nav>
 </header>
