--- a/partials/header.html
+++ b/partials/header.html
@@ -1,13 +1,15 @@
 <header class="site-header">
-  <nav class="nav">
+  <div class="nav-container">
+    
     <a href="/" class="brand">
-      <img src="/assets/images/Logo1.png" alt="TichaAfrica" class="logo">
+      <img src="/assets/images/Logo1.png" alt="TichaAfrica logo" class="logo">
+      <span class="slogan">Teach Smart. Lead Change.</span>
     </a>
 
-    <div class="nav-links">
+    <nav class="nav-links">
       <a href="/" data-nav="home">Home</a>
-      <a href="/teachers/" data-nav="teachers" class="primary">Teachers</a>
-      <a href="/institutions/" data-nav="institutions">Institutions</a>
-    </div>
-  </nav>
+      <a href="/teachers/" data-nav="teachers">Teachers</a>
+    </nav>
+
+  </div>
 </header>
