--- a/partials/header.html
+++ b/partials/header.html
@@ -1,15 +1,24 @@
-<header class="site-header">
-  <div class="nav-container">
-    
-    <a href="/" class="brand">
-      <img src="/assets/images/Logo1.png" alt="TichaAfrica logo" class="logo">
-      <span class="slogan">Teach Smart. Lead Change.</span>
+<header>
+  <nav class="nav container">
+    <a href="/" class="logo-link">
+      <img src="/assets/images/Logo1.png" alt="TichaAfrica Logo" class="logo" />
+      <span class="slogan">Teach Smart, Lead Change</span>
     </a>
 
-    <nav class="nav-links">
-      <a href="/" data-nav="home">Home</a>
-      <a href="/teachers/" data-nav="teachers">Teachers</a>
-    </nav>
-
-  </div>
+    <ul class="nav-links">
+      <li><a href="/" class="nav-link" data-page="home">Home</a></li>
+      <li><a href="/teachers/" class="nav-link" data-page="teachers">Teachers</a></li>
+      <li><a href="/institutions/" class="nav-link" data-page="institutions">Institutions</a></li>
+    </ul>
+  </nav>
 </header>
+
+<script>
+  // Active page highlight
+  const currentPage = document.body.dataset.page;
+  document.querySelectorAll('.nav-link').forEach(link => {
+    if(link.dataset.page === currentPage){
+      link.classList.add('active');
+    }
+  });
+</script>
